--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link rel="icon" type="image/ico" href="%PUBLIC_URL%/favicon.ico?v=2" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;500&family=Syne+Mono&display=swap"
+      rel="stylesheet"
+    />
 
     <title>Dead by Daylight Perk Roulette</title>
   </head>
