added background music to application with auto play

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,9 @@
     <title>Dead by Daylight Perk Roulette</title>
   </head>
   <body>
+    <audio autoplay>
+      <source src="Dead by Daylight theme.mp3" type="audio/mpeg" />
+    </audio>
     <div id="root"></div>
   </body>
 </html>
