--- a/public/index.html
+++ b/public/index.html
@@ -14,9 +14,9 @@
     <title>Dead by Daylight Perk Roulette</title>
   </head>
   <body>
-    <audio autoplay>
+    <!-- <audio controls autoplay>
       <source src="Dead by Daylight theme.mp3" type="audio/mpeg" />
-    </audio>
+    </audio> -->
     <div id="root"></div>
   </body>
 </html>
