hopeful finalization of audio issues

--- a/public/index.html
+++ b/public/index.html
@@ -14,10 +14,10 @@
     <title>Dead by Daylight Perk Roulette</title>
   </head>
   <body>
-    <audio loop preload="auto" id="audio-player">
+    <!-- <audio loop preload="auto" id="audio-player">
       <source src="Dead by Daylight theme.mp3" type="audio/mpeg" />
       <source src="Dead by Daylight theme.ogg" type="audio/ogg" />
-    </audio>
+    </audio> -->
     <div id="root"></div>
   </body>
 </html>
